--- a/inner-sanctum.html
+++ b/inner-sanctum.html
@@ -355,7 +355,7 @@ The era of suffering under the Curse has ended. Place your Curse into the furnac
             </section>
 
             <div id="oracle-gateway">
-                <div class="gateway-text doctrine-pure-silver">Have you absorbed the truth?</div>
+                <div class="gateway-text doctrine-pure-silver">Have you absorbed the Gnosis?</div>
                 <a href="oracle-form.html" class="arrow-btn">
                     <svg viewBox="0 0 24 24" style="fill:#131314; width:24px; height:24px;"><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></svg>
                 </a>
