--- a/inner-sanctum.html
+++ b/inner-sanctum.html
@@ -144,7 +144,7 @@
         
         .compact-menu { position: fixed; top: 70px; right: 20px; background-color: var(--card-bg); border: 1px solid var(--border); border-radius: 12px; padding: 10px; display: none; z-index: 4500; }
         .compact-menu.active { display: block; }
-        .compact-menu a, .compact-menu button { display: block; text-decoration: none; font-size: 18px; padding: 10px 15px; color: var(--pure-silver); background: none; border: none; text-align: left; width: 100%; }
+        .compact-menu a, .compact-menu button { display: block; text-decoration: none; font-size: 18px; padding: 10px 15px; color: var(--pure-silver); background: none; border: none; text-align: left; width: 100%; cursor: pointer; }
         
         .sticky-nav { position: fixed; top: var(--header-h); left: 0; width: 100%; height: var(--nav-h); background-color: var(--bg-color); z-index: 3000; display: flex; align-items: center; justify-content: center; }
         select { width: 100%; max-width: 450px; padding: 8px; background: var(--card-bg); border: 1px solid var(--border); color: var(--pure-silver); font-family: 'Pirata One'; font-size: 16px; text-align: center; }
@@ -188,7 +188,8 @@
             <div class="logo luster-sky-silver">The Chosen</div>
             <button class="menu-btn" onclick="toggleMenu()"><span></span><span></span><span></span></button>
             <div class="compact-menu" id="compactMenu">
-                <a href="#" onclick="toggleMenu()">Doctrine</a>
+                <a href="#" onclick="toggleMenu()">Sanctum</a>
+                <a href="eye-of-equilibrium.html">Eye of Equilibrium</a>
                 <a href="oracle-form.html">Oracle</a>
                 <button class="logout-link" onclick="logout()" style="color:#ff6b6b">Disconnect</button>
             </div>
