--- a/inner-sanctum.html
+++ b/inner-sanctum.html
@@ -148,11 +148,11 @@
 </head>
 <body id="sanctumBody">
 
-    <img src="totem.jpg" id="bg-totem" alt="The Gate of Truth">
+    <img src="totem.jpg" id="bg-totem" alt="The Gate of Gnosis">
 
     <div id="intro-overlay" onclick="enterSanctum()">
         <div id="intro-text">
-            You who stand before the Gate of Truth.<br>Read the Doctrine, and open the way.
+            You who stand before the Gate of Gnosis.<br>Read the Doctrine, and open the way.
             <br>
             <svg class="intro-arrow" viewBox="0 0 24 24"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
         </div>
