--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         
         <div id="loginForm">
             <div class="form-group">
-                <input type="password" id="accessCode" placeholder="FREQUENCY CODE" oninput="clearError()">
+                <input type="text" id="accessCode" placeholder="FREQUENCY CODE" oninput="clearError()">
                 <input type="text" id="walletAddr" placeholder="WALLET ADDRESS (0x...)" oninput="clearError()">
             </div>
             <div id="errorMsg" class="error-msg">Incorrect Frequency Code.</div>
