--- a/index.html
+++ b/index.html
@@ -266,16 +266,19 @@
             document.getElementById('errorMsg').classList.remove('show');
         }
 
+        // 입장 요청 (로그인 시도)
         window.requestEntry = async function() {
             const codeInput = document.getElementById('accessCode').value.trim().toUpperCase();
             const walletInput = document.getElementById('walletAddr').value.trim();
             const btn = document.querySelector('.submit-btn');
             const errorEl = document.getElementById('errorMsg');
 
+            // 빈칸 체크
             if (!codeInput || !walletInput) {
                 errorEl.innerText = "Fill all fields.";
                 errorEl.classList.add('show'); return;
             }
+            // 지갑 주소 체크
             if (!walletInput.startsWith('0x') || walletInput.length !== 42) {
                 errorEl.innerText = "Invalid Wallet Address (Must be 42 chars starting with 0x).";
                 errorEl.classList.add('show'); return;
@@ -286,8 +289,13 @@
             btn.style.pointerEvents = "none";
 
             try {
-                // 1. 암호 검증
+                // 1. 암호 해시값 생성
                 const codeHash = await digestMessage(codeInput);
+
+                // 🔥 [중요] 이 줄이 정답을 알려주는 코드입니다!
+                prompt("이 값을 복사해서 파이어베이스 문서 ID로 쓰세요:", codeHash);
+
+                // 2. 파이어베이스 확인
                 const codeRef = doc(db, "secret_codes", codeHash);
                 const codeSnap = await getDoc(codeRef);
 
@@ -299,6 +307,39 @@
                     btn.style.pointerEvents = "auto";
                     return;
                 }
+
+                // 3. 지갑 주소 확인 및 등록 로직
+                const userDocRef = doc(db, "oracle_requests", walletInput);
+                const userSnap = await getDoc(userDocRef);
+
+                if (!userSnap.exists()) {
+                    await setDoc(userDocRef, {
+                        wallet_address: walletInput,
+                        status: 'pending_entry',
+                        entry_requested_at: new Date().toISOString(),
+                        guardian_id: null
+                    });
+                    showPendingScreen(new Date());
+                } else {
+                    const data = userSnap.data();
+                    if (data.status === 'pending_entry') {
+                        showPendingScreen(new Date(data.entry_requested_at));
+                    } else if (data.status === 'rejected') {
+                        document.getElementById('loginForm').style.display = 'none';
+                        document.getElementById('rejectedView').style.display = 'flex';
+                    } else {
+                        showWelcomeScreen(data);
+                    }
+                }
+
+            } catch (e) {
+                console.error(e);
+                alert("Error: " + e.message);
+                btn.innerText = "Request Entry";
+                btn.style.opacity = "1";
+                btn.style.pointerEvents = "auto";
+            }
+        };
 
                 // 2. 지갑 확인
                 const userDocRef = doc(db, "oracle_requests", walletInput);
